--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "consign": "^0.1.6",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongodb": "^4.2.2",
     "nodemon": "^2.0.15"
