--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.2",
     "md5": "^2.3.0",
     "mongodb": "^4.2.2",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
