--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "portfolio_example_learning",
-  "version": "1.0.0",
-  "description": "Portfolio de exemplo para pratica de trabalho em equipe e tecnologias",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/igoryan260/portfolio_example_learning.git"
-  },
-  "author": "Igor; Othon",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/igoryan260/portfolio_example_learning/issues"
-  },
-  "homepage": "https://github.com/igoryan260/portfolio_example_learning#readme",
-  "dependencies": {
-    "body-parser": "^1.19.1",
-    "consign": "^0.1.6",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "express-session": "^1.17.2",
-    "md5": "^2.3.0",
-    "mongodb": "^4.3.0",
-    "multer": "^1.4.4",
-    "nodemon": "^2.0.15",
-    "session": "^0.1.0"
-  }
+    "name": "portfolio_example_learning",
+    "version": "1.0.0",
+    "description": "Portfolio de exemplo para pratica de trabalho em equipe e tecnologias",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/igoryan260/portfolio_example_learning.git"
+    },
+    "author": "Igor; Othon",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/igoryan260/portfolio_example_learning/issues"
+    },
+    "homepage": "https://github.com/igoryan260/portfolio_example_learning#readme",
+    "dependencies": {
+        "body-parser": "^1.19.1",
+        "consign": "^0.1.6",
+        "ejs": "^3.1.6",
+        "express": "^4.17.2",
+        "express-session": "^1.17.2",
+        "md5": "^2.3.0",
+        "mongodb": "^4.3.0",
+        "multer": "^1.4.4",
+        "nodemon": "^2.0.15",
+        "session": "^0.1.0"
+    }
 }
