--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "dependencies": {
         "body-parser": "^1.19.1",
         "consign": "^0.1.6",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.2",
         "express-session": "^1.17.2",
