--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "body-parser": "^1.19.1",
         "consign": "^0.1.6",
+        "cool-ascii-faces": "^1.3.4",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "ejs": "^3.1.6",
